--- a/server/package.json
+++ b/server/package.json
@@ -20,14 +20,21 @@
   "dependencies": {
     "@prisma/client": "^6.12.0",
     "@types/cookie-parser": "^1.4.9",
+    "@types/express": "^4.17.23",
     "bcryptjs": "^3.0.2",
-    "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2"
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.0",
+    "express": "^4.21.2",
+    "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
-    "@types/express": "^5.0.3",
+    "@types/cors": "^2.8.19",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/morgan": "^1.9.10",
     "@types/node": "^24.0.14",
     "prisma": "^6.12.0",
     "tsx": "^4.20.3",
